# geo_score-api

./: .dockerignore  Dockerfile  Makefile  docker-compose.yml  main.py  render.yaml  setup.cfg  setup.py  start.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  app.py  main.py  pyproject.toml  render.yaml  requirements.txt  setup.cfg  setup.py  start.sh
backend/data/: __init__.py
backend/models/: __init__.py  schemas.py
backend/services/: __init__.py  scorer.py
backend/tests/: test_wiki_check.py
backend/utils/: linkedin_check.py  llm_check.py  web_presence.py
tests/: conftest.py  test_api.py  test_linkedin_check.py  test_llm_check.py  test_scorer.py  test_web_presence.py
utils/: llm_check.py  wiki_check.py
