[metadata]
description-file = README.md

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =.

[options.packages.find]
where = .
include = *

[options.entry_points]
# Add any console scripts here if needed
# For example:
# console_scripts =
#     geoscore=main:main